--- a/Custom/catagory.css
+++ b/Custom/catagory.css
@@ -11,6 +11,7 @@
   margin-top: 40px;
   margin-right: 20%;
   margin-left: 10%;
+  margin-bottom: 3%;
 }
 
 .btn-button{
@@ -26,7 +27,8 @@
 }
 
 
-.btn-button:active {
+.btn-button:active
+{
 border-color: #008334;
 background-color: rgb(166, 215, 148);
 color: #04ff686c;
@@ -53,7 +55,7 @@ display: block;
 
 .dropdown-sub_type {
   background-color: #f9f9f9;
-  width: 887px;
+  width: 95%;
   margin-top: -10px;
   margin-bottom: 10px;
   box-shadow: inset 0px 0px 5px 2px rgba(74, 74, 74, 0.275);
