--- a/Custom/profile.css
+++ b/Custom/profile.css
@@ -9,11 +9,43 @@
 }
 
 .rounded-circle{
-    margin-left: 19%;
+    margin-left: 22%;
+    margin-top: 5%;
 }
 
 .card-user{
     width: 100%; 
-    margin-left: 10px;
+    margin-left: 5px;
     height: 500px;
+}
+
+.profile-container {
+    padding: 20px;
+}
+
+.categories-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 30px;
+    margin-left: 20px;
+    justify-content: center;
+}
+
+.category-item {
+    background-color: #f8f9fa;
+    padding: 10px 30px;
+    border: 1px solid #dee2e6;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #495057;
+}
+
+.category-item:hover {
+    background-color: #e2e6ea;
+}
+
+.hr-catagory{
+    margin-left: 30px;
+    margin-right:60px;
 }
