--- a/Custom/allcategory.css
+++ b/Custom/allcategory.css
@@ -4,15 +4,16 @@
 .div-img {
   position: relative; 
   width: 100%; 
-  height: 450px; 
+  height: 550px; 
   overflow: hidden;
 }
 
 /* ด้านบน */
 .img-banner {
-  width: 100%; 
-  height: 100%; 
+  width: 100%;
+  max-height: 100%;
   object-fit: cover;
+  margin: 0 auto;
 }
 
 /* ปุ่มโพสต์หา-ขายสินค้า */
@@ -53,7 +54,7 @@ text-align: center;
 .btn-serch {
 background-color: #09CD56; 
 width: 50px;
-padding: 10px; 
+padding: 10px;
 margin-left: -4px;
 border: 0px;
 transition: background-color 0.5s ease, color 0.5s ease;
@@ -64,8 +65,11 @@ background-color: #08ae4b;
 }
 
 .img-container {
-  position: relative;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #033a1a;
+
 }
 
 .top-left-text {
