--- a/Custom/profile.css
+++ b/Custom/profile.css
@@ -35,6 +35,7 @@
     
 }
 
+/* หมวดหมู่ */
 .category-item {
     background-color: #f8f9fa;
     padding: 10px 30px;
@@ -56,3 +57,28 @@
     margin-left: 30px;
     margin-right:60px;
 }
+
+/* ปุ่มโพสต์หา-ขายสินค้า */
+.div-btn {
+    position: absolute; 
+    right: 20px;
+    margin-right: 70px;
+    }
+    
+    .btn-post {
+    background-color: #09CD56;
+    color: #FFFFFF; 
+    width: 100%;
+    padding: 10px;  
+    transition: background-color 0.5s ease, color 0.5s ease;
+    }
+    
+    .btn-post:hover {
+    background-color: #08ae4b;
+    color: #FFFFFF;
+    }
+    
+    /* css ลูกเล่นตรงส่วน ปุ่มโพสต์หา-ขายสินค้า */
+    .blink-2{-webkit-animation:blink-2 1s 1s infinite both;animation:blink-2 1s 1s infinite both}
+    
+    @-webkit-keyframes blink-2{0%{opacity:1}50%{opacity:.2}100%{opacity:1}}@keyframes blink-2{0%{opacity:1}50%{opacity:.2}100%{opacity:1}}
