--- a/Custom/insertpost.css
+++ b/Custom/insertpost.css
@@ -185,7 +185,7 @@ textarea:hover{
 
 /* เลือกประกาศ */
 .radio-input {
-  --container-width: 600px;
+  --container-width: 700px;
   --selection-bg: #3ec550;
   --border-radius: 10px;
   --border-color: rgba(53, 52, 52, 0.226);
@@ -245,4 +245,72 @@ textarea:hover{
 
 .radio-input label:nth-of-type(2):has(input:checked) ~ .selection {
   transform: translateX(calc(var(--container-width) * 1 / 2));
+}
+
+
+.radio-input-edit {
+  --container-width: 700px;
+  --selection-bg: #3ec550;
+  --border-radius: 10px;
+  --border-color: rgba(53, 52, 52, 0.226);
+  --font-color: #000;
+  --font-color-selected: #fff;
+  --transition-speed: 0.15s;
+
+
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: var(--container-width);
+  background-color: #fff;
+  border: 1px solid var(--border-color);
+  border-radius: var(--border-radius);
+  overflow: hidden;
+}
+
+.radio-input-edit input {
+  display: none;
+}
+
+.radio-input-edit label {
+  height: 50px;
+  flex: 1;
+  padding: 10px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  letter-spacing: -1px;
+  font-size: 16px;
+  color: var(--font-color);
+  z-index: 1;
+  transition: color var(--transition-speed);
+}
+
+.radio-input-edit .selection {
+  position: absolute;
+  height: 100%;
+  width: calc(var(--container-width) / 3);
+  background-color: var(--selection-bg);
+  top: 0;
+  left: 0;
+  z-index: 0;
+  transition: transform var(--transition-speed), background-color var(--transition-speed);
+}
+
+.radio-input-edit label:has(input:checked) {
+  color: var(--font-color-selected);
+}
+
+.radio-input-edit label:nth-of-type(1):has(input:checked)~.selection {
+  transform: translateX(calc(var(--container-width) * 0 / 3));
+}
+
+.radio-input-edit label:nth-of-type(2):has(input:checked)~.selection {
+  transform: translateX(calc(var(--container-width) * 1 / 3));
+}
+
+.radio-input-edit label:nth-of-type(3):has(input:checked)~.selection {
+  transform: translateX(calc(var(--container-width) * 2 / 3));
 }
