--- a/Custom/show_products.css
+++ b/Custom/show_products.css
@@ -147,6 +147,22 @@ a {
     left: 96%
 }
 
+.tag-close {
+    border: 1px solid;
+    border-color: #ffae00;
+    background-color: #ffae00;
+    padding: 5px;
+    width: 150px;
+    border-radius: 7px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    left: 50%;
+    margin-top: 30%;
+    font-size: x-large;
+}
+
 .text-config {
     width: 200px;
     overflow: hidden;
