--- a/Custom/header.css
+++ b/Custom/header.css
@@ -1,17 +1,19 @@
-    li a, .dropbtn {
-    display: inline-block;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+    li a,
+    .dropbtn {
+      display: inline-block;
+      color: rgb(255, 255, 255);
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
     }
-  
-      li a:hover, .dropdown:hover .dropbtn {
-    color: #bfbfbf;
+
+    li a:hover,
+    .dropdown:hover .dropbtn {
+      color: #bfbfbf;
     }
-  
-      li.dropdown {
-    display: inline-block;
+
+    li.dropdown {
+      display: inline-block;
     }
 
     .dropdown-content {
@@ -19,10 +21,10 @@
       position: absolute;
       background-color: #f9f9f9;
       min-width: 160px;
-      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
       z-index: 1;
     }
-    
+
     .dropdown-content a {
       color: black;
       padding: 12px 16px;
@@ -31,14 +33,47 @@
       text-align: left;
     }
 
-    .dropdown-content a:hover {background-color: #f1f1f1;}
+    .dropdown-content a:hover {
+      background-color: #f1f1f1;
+    }
 
     .dropdown:hover .dropdown-content {
       display: block;
     }
-  
+
     /* navbar */
-    .navbar-head{
+    .navbar-head {
       position: sticky;
       top: 0;
+    }
+
+    .notify {
+      width: 400px;
+      height: 450px;
+      overflow-y: auto;
+    }
+
+    .notify::-webkit-scrollbar {
+      width: 8px;
+      margin-right: -8px;
+      /* Width of the scrollbar */
+    }
+
+    .notify::-webkit-scrollbar-thumb {
+      background-color: #888;
+      /* Color of the scrollbar thumb */
+      border-radius: 10px;
+      /* Rounded corners for the thumb */
+    }
+
+    .notify::-webkit-scrollbar-thumb:hover {
+      background-color: #555;
+      /* Color of the scrollbar thumb on hover */
+    }
+
+    .notify::-webkit-scrollbar-track {
+      background-color: #f1f1f1;
+      /* Color of the scrollbar track */
+      border-radius: 10px;
+      /* Rounded corners for the track */
     }
