--- a/Custom/footer.css
+++ b/Custom/footer.css
@@ -1,13 +1,8 @@
 
-html {
-  position: relative;
-  min-height: 100%;
-}
 .footer {
- /* position: fixed; */
   bottom: 0;
   width: 100%;
-  height: 300px;
+  height: 100%;
   display: block;
 }
 
@@ -15,7 +10,7 @@ html {
 @media (max-width: 567em) {
   
     .footer {
-      height: 340px;
+      height: 400px;
     }
 }
 
