--- a/Custom/profile.css
+++ b/Custom/profile.css
@@ -18,7 +18,7 @@
     margin-top: 65px;
     width: 100%; 
     margin-left: 5px;
-    height: 320px;
+    /* height: 320px; */
     border: 0px;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 12px;
 }
