--- a/Custom/header.css
+++ b/Custom/header.css
@@ -81,3 +81,14 @@
     .menu-notifly{
       width: 450px;
     }
+  
+    .sticky-footer {
+      position: sticky;
+      bottom: 0;
+      margin-top: 20px;
+      color: #f9f9f9;
+      background-color: rgb(255, 0, 0);
+      padding-top: 10px;
+      width: 100%;
+    }
+    
